# computer-use-agent

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  run_demo.sh
assets/: 1. log old.md  1. log.md  2. log old.md  2. log.md  3. log.md  Demo1_log.md  Demo2_log.md  Demo3_log.md
code/: agent_config.yaml  computer_mcp_server.py  flow.py  gateway.py  generate_custom_log.py  persistence.py  pyproject.toml  recovery.py  replay.py  sandbox.py  schemas.py  skills.py  visualize.py
code/browser/: client.py  dom.py  driver.py  skill.py
code/computer/: applescript.py  daemon.py  driver.py  highlight.py  skill.py
code/prompts/: computer.md  critic.md  formatter.md  planner.md  product_analyst.md  product_recommendation.md  product_shortlister.md
computer_use_agent/: graph_viewer.html  index.html  server.py
computer_use_agent/static/: results.css
gateway/: agent_routing.yaml  client.py  embedders.py  main.py  providers.py  router.py  schemas.py
gateway/static/: dashboard.html
shopping_agent/: graph_viewer.html  index.html  server.py
shopping_agent/static/: results.css
